map-section id moved so the buttons scroll correctly to map position on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ padding: 0%;
 
 
 /*----Map Section - Start---------------*/
-#map-section {
+#map-page-content {
     font-family: "Neucha", sans-serif;
     background-color: rgba(225, 254, 251, 1);
     letter-spacing: 0.05em;
